# sentinel

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  sentinel-hook.py
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/bench/: calibrate.py  pareto.py  run_bench.py
backend/sentinel/: __init__.py  cascade.py  config.py  embeddings.py  heuristics.py  layer1.py  layer2.py  layer3.py  registry.py  schemas.py
backend/tests/contract/: test_decision_schema.py  test_detect_request_schema.py
backend/tests/integration/: test_cascade.py
backend/tests/unit/: test_embeddings.py  test_heuristics.py  test_layer1.py  test_layer2.py  test_layer3.py
configs/: cascade.yaml  registry.yaml
data/bait-corpus/: README.md
data/evidence/: 2026-05-16-llama-bare-phantom.md  2026-05-16-llama-ghost-claims.md  README.md
data/sentinel-bench-v1/: corpus.jsonl  registry.json
deploy/: Caddyfile  Dockerfile.backend  docker-compose.yml
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  blueprint.md
frontend/: index.html
results/: BENCHMARKS.md
specs/001-sentinel-mvp/: plan.md  spec.md  tasks.md
specs/001-sentinel-mvp/contracts/: decision.schema.json  detect_request.schema.json
