[project]
name = "sentinel"
version = "0.1.0"
description = "Phantom tool-call detector with self-correction for autonomous LLM agents."
authors = [{ name = "Yehor Larcenko" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "sqlite-utils>=3.37",
    "rapidfuzz>=3.10.0",       # Levenshtein for F1 heuristic
    "diskcache>=5.6.3",        # on-disk embedding LRU
    "google-generativeai>=0.8.3",
    "openai>=1.54.0",          # used as OpenAI-compatible client for Featherless
    "numpy>=2.1.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
bench = [
    "matplotlib>=3.9.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
]

[project.scripts]
sentinel-bench = "backend.bench.run_bench:main"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]
ignore = ["E501"]   # line-length enforced by formatter

[tool.mypy]
python_version = "3.11"
strict = true
files = ["backend/sentinel"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
